[package]
name = "dependencies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

logging = { version = "0.4.20", package = "log" }

# Schlüssel-Wert-Paar
rand = "0.8.5"
# Inline-Tabelle
regex = { version = "1.10.2", features = ["unicode", "logging"] }
# Untertabelle
[dependencies.serialization_deserialization]
version = "1.0.192"
package = "serde"
# ...

[dev-dependencies]
# Unterstützungsframework für Tests
rstest = "0.18.2"