[package]
name = "features"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand = { version = "0.8.5", default-features = false, optional = true }
regex = { version = "1.10.2", optional = true }

[features]
#default = ["feature_a"]
feature_a = ["feature_c", "feature_d", "dep:regex"]
feature_b = ["feature_e"]
feature_c = []
feature_d = ["dep:rand"]
feature_e = []