[package]
name = "konditional"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[target.'cfg(target_arch = "aarch64")'.dependencies]
rand = "0.8.0"

[target.'cfg(windows)'.dependencies]
rand = "0.7.3"

[target.'cfg(android)'.dependencies]
rand = "0.6.5"

[target.'cfg(ios)'.dependencies]
rand = "0.8.2"