[package]
name = "pakete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#paket_a = { version = "1.0.0", path = "../paket_a" }
paket_a = { version = ">0.5, <= 1.9.999", path = "../paket_a" }
#rand = "0.8.5"
#[dependencies.rand]
#version = "0.8.5"
rand = { version = "0.8.5" }
regex = { git = "https://github.com/rust-lang/regex.git", version = "1.10.2" }
