[workspace]
members = ["pakete/paket_a", "pakete/paket_b"]
# Auflösung der Abhängigkeiten im aktuellen Format
# wird in einer Paket-Manifestdatei über "edition" erkannt
resolver = "2"

[workspace.package]
version = "0.5.6"
authors = ["Fred", "Freda"]
description = "Eine nützliche Sammlung Werkzeuge"
# ...

[workspace.dependencies]
rand = "0.8.5"
regex = "1.10.2"
# ...