[package]
name = "nebenlaufig_asynchron_smart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["full"] }

[features]
thread_starten = []
thread_starten_join = []
thread_arc_beispiel = []
thread_scope = []
thread_barrier = []
thread_park_unpark = []
thread_once = []
thread_send_sync = []
thread_channel_async = []
thread_channel_sync = []
thread_mutex = []
thread_rwlock = []
thread_condvar = []
thread_atomar = []
smart_pointer = []
async_await = []

