[package]
name = "optional_optional"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", optional = true }

[features]
feat_x    = []
feat_y    = []
generator = ["rand?/log", "rand?/serde"]